Stopped using finals.css
Had decided to use <style> </style> on finals.html instead of finals.css due to it not working for some reason

--- a/finals.css
+++ b/finals.css
@@ -1,7 +1,11 @@
-input.checkbox.checked{
+p input.checkbox.checked{
   text-decoration: line-through;  
 }
 
 p{
     color: red;
+}
+
+title{
+    color: blue;
 }
